# hopscotch

./: .gitignore  README.md  package-lock.json
backend/: .env.example  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  constants.js  index.css  utils.js
frontend/src/components/: BoxTrailButton.jsx  HopscotchBox.jsx  HopscotchTrail.jsx  InspirationButtons.jsx  PositiveSignalSidebar.jsx  PromptSidebar.jsx  ReferencePointSidebar.jsx  ResultBlock.jsx  ResultCard.jsx  SteeringButtons.jsx
frontend/src/pages/: HomePage.jsx  SummaryPage.jsx
